# 2025-p7-mitsudz

./: .gitignore  README.md  calendar.ics  docker-compose.yaml  pyproject.toml  q-demo.tf  sqs.tf
todo/tasks/: ical.py
todo/views/: routes.py
