[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Brae Webb", "Evan Hughes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
gunicorn = "*"
celery = {extras = ["sqs"], version = "^5.5.2"}
redis = "^6.0.0"
boto3 = "^1.38.8"
icalendar = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"